--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "bootstrap-vue": "^2.23.1",
+    "cheerio-httpcli": "^0.8.3",
     "core-js": "^3.8.3",
+    "express": "^4.18.2",
+    "google-news-json": "^2.1.0",
     "jquery": "^3.6.1",
+    "request": "^2.88.2",
+    "rss-to-json": "^2.1.0",
     "vue": "^2.7.14",
     "vue-router": "^3.5.1",
+    "vue-rss-feed": "^0.2.4",
     "vue-slider-component": "^3.2.23",
     "vuex": "^3.6.2"
   },
