--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
+    "bootstrap-icons": "^1.10.2",
     "bootstrap-vue": "^2.23.1",
     "cheerio-httpcli": "^0.8.3",
     "core-js": "^3.8.3",
