--- a/package.json
+++ b/package.json
@@ -13,16 +13,13 @@
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.10.2",
     "bootstrap-vue": "^2.23.1",
-    "cheerio-httpcli": "^0.8.3",
     "core-js": "^3.8.3",
-    "express": "^4.18.2",
-    "google-news-json": "^2.1.0",
     "jquery": "^3.6.1",
-    "request": "^2.88.2",
-    "rss-to-json": "^2.1.0",
+    "node-sass": "^8.0.0",
+    "sass-loader": "^13.2.0",
     "vue": "^2.7.14",
+    "vue-beautiful-chat": "^2.5.0",
     "vue-router": "^3.5.1",
-    "vue-rss-feed": "^0.2.4",
     "vue-slider-component": "^3.2.23",
     "vuex": "^3.6.2"
   },
